# glue_analysis

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yaml
examples/: test_glue.py
glue_analysis/: auxiliary.py  correlator.py
glue_analysis/readers/: __init__.py  read_binary.py  read_fortran.py
test/: test_correlator.py  test_read_binary.py  test_read_fortran.py
