[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "glue_analysis"
version = "0.0.1"
authors = [{name="Ed Bennett", email="e.j.bennett@swansea.ac.uk"}]
description = "A wrapper for pyerrors to analyse specific classes of glueball data."
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numba",
    "numpy",
    "pandas",
    "pyerrors",
    "pandera",
]

[project.urls]
"Homepage" = "https://github.com/edbennett/glue_analysis"
"Bug Tracker" = "https://github.com/edbennett/glue_analysis/issues"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "S101", "N", "COM812", "ISC001"]
